# mmd-rs

./: .gitattributes  Cargo.toml  LICENSE.md  README.md
asset/ニコニ立体ちゃん/: Alicia_blade.pmx  Alicia_solid.pmx
examples/: three-viewer.rs
src/: lib.rs  pmx.rs  traits.rs  types.rs
src/io/: mod.rs  newtypes.rs  pmx.rs
