[package]
name = "mmd"
version = "0.1.0"
description = "An implementation of PMD/PMX/VMD used in MMD (MikuMikuDance)."
authors = ["aoowweenn <aoowweenn@gmail.com>"]

[dependencies]
byteorder = "1"
encoding = "*"
cgmath = "*"
num = "*"
enum-primitive-derive = "*"
enumflags = "*"
enumflags_derive = "*"
pod_io = { path = "../pod-io" }
