[package]
name = "mmd"
version = "0.1.0"
description = "An implementation of PMD/PMX/VMD used in MMD (MikuMikuDance)."
authors = ["aoowweenn <aoowweenn@gmail.com>"]

[dependencies]
byteorder = "1"
encoding = "*"
cgmath = { version = "*", features = ["mint"] }
num-traits = "*"
enum-primitive-derive = "*"
enumflags = "*"
enumflags_derive = "*"
pod_io = { git = "https://github.com/aoowweenn/pod-io-rs.git" }
three = "0.3.1"
mint = "0.5"

[[example]]
name = "three-viewer"
