[package]
name = "mmd"
version = "0.1.0"
description = "An implementation of PMD/PMX/VMD used in MMD (MikuMikuDance)."
authors = ["aoowweenn <aoowweenn@gmail.com>"]

[dependencies]
byteorder = "1"
encoding = "*"
cgmath = "*"
num-traits = "*"
enum-primitive-derive = "*"
enumflags = "*"
enumflags_derive = "*"
pod_io = { git = "https://github.com/aoowweenn/pod-io-rs.git" }

[dev-dependencies]
three = "0.3.1"
mint = "0.5"
cgmath = { version = "*", features = ["mint"] }

[[example]]
name = "three-viewer"

[workspace]
members = ["examples/viewer"]
